tests/test_proof/good/rationals.catala_en
## Test

```catala
declaration scope A:
  context x content decimal
  context y content boolean

scope A:
  definition x equals 1.
  definition y under condition x >. 1./.3. consequence equals true
  definition y under condition x <=. 1./.3. consequence equals false
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[RESULT] No errors found during the proof mode run.
```
